public static class ContainerStrings 
{
    public static string Move => "Move";
    public static string Attack => "Attack";
    public static string Hit => "Hit";
    public static string IsDead => "IsDead";
    public static string Dead => "Dead";
    public static string IsAttack => "IsAttack";
    public static string Vertical => "Vertical";
    public static string Horizontal => "Horizontal";
    public static string InputMagnitude => "InputMagnitude";
    public static string NumberCurrentWeapon => "NumberCurrentWeapon";
}